// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`themes/tokens/color/utilities/generateColors > with a passed value 1`] = `
{
  "backgroundCritical": {
    "oklch": {
      "c": 0.205,
      "h": 20.28,
      "l": 0.59,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.164,
      "h": 20.28,
      "l": 0.584168,
      "mode": "oklch",
    },
  },
  "backgroundCriticalMuted": {
    "oklch": {
      "c": 0.02,
      "h": 20.28,
      "l": 0.98,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.021866666666666666,
      "h": 20.28,
      "l": 0.25,
      "mode": "oklch",
    },
  },
  "backgroundDisabled": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 0.95,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.28,
      "mode": "oklch",
    },
  },
  "backgroundDisabledMuted": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 0.98,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.23,
      "mode": "oklch",
    },
  },
  "backgroundElevationBase": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 1,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.2,
      "mode": "oklch",
    },
  },
  "backgroundElevationOverlay": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 1,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.23,
      "mode": "oklch",
    },
  },
  "backgroundElevationRaised": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 1,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.215,
      "mode": "oklch",
    },
  },
  "backgroundNeutral": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 0.94,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.32,
      "mode": "oklch",
    },
  },
  "backgroundNeutralMuted": {
    "oklch": {
      "alpha": 0.03,
      "c": 0,
      "h": 89.88,
      "l": 0,
      "mode": "oklch",
    },
    "oklchDark": {
      "alpha": 0.03,
      "c": 0,
      "h": 89.88,
      "l": 1,
      "mode": "oklch",
    },
  },
  "backgroundPage": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 1,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.16,
      "mode": "oklch",
    },
  },
  "backgroundPageMuted": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 0.98,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.18,
      "mode": "oklch",
    },
  },
  "backgroundPositive": {
    "oklch": {
      "c": 0.13,
      "h": 151.8,
      "l": 0.55,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.10400000000000001,
      "h": 151.8,
      "l": 0.52696,
      "mode": "oklch",
    },
  },
  "backgroundPositiveMuted": {
    "oklch": {
      "c": 0.02,
      "h": 151.8,
      "l": 0.98,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.013866666666666668,
      "h": 151.8,
      "l": 0.25,
      "mode": "oklch",
    },
  },
  "backgroundPrimary": {
    "oklch": {
      "c": 0,
      "h": 0,
      "l": 0,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 0,
      "l": 1,
      "mode": "oklch",
    },
  },
  "backgroundPrimaryMuted": {
    "oklch": {
      "c": 0,
      "h": 0,
      "l": 0.98,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 0,
      "l": 0.25,
      "mode": "oklch",
    },
  },
  "backgroundWarning": {
    "oklch": {
      "c": 0.22,
      "h": 80,
      "l": 0.82,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.17600000000000002,
      "h": 80,
      "l": 0.810784,
      "mode": "oklch",
    },
  },
  "backgroundWarningMuted": {
    "oklch": {
      "c": 0.04,
      "h": 80,
      "l": 0.98,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.02346666666666667,
      "h": 80,
      "l": 0.25,
      "mode": "oklch",
    },
  },
  "black": {
    "oklch": {
      "c": 0,
      "l": 0,
      "mode": "oklch",
    },
    "oklchDark": undefined,
  },
  "borderCritical": {
    "oklch": {
      "c": 0.205,
      "h": 20.28,
      "l": 0.51,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.164,
      "h": 20.28,
      "l": 0.684168,
      "mode": "oklch",
    },
  },
  "borderCriticalMuted": {
    "oklch": {
      "c": 0.02,
      "h": 20.28,
      "l": 0.95,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.021866666666666666,
      "h": 20.28,
      "l": 0.31,
      "mode": "oklch",
    },
  },
  "borderDisabled": {
    "oklch": {
      "alpha": 0.06,
      "c": 0,
      "h": 89.88,
      "l": 0,
      "mode": "oklch",
    },
    "oklchDark": {
      "alpha": 0.04,
      "c": 0,
      "h": 89.88,
      "l": 1,
      "mode": "oklch",
    },
  },
  "borderNeutral": {
    "oklch": {
      "alpha": 0.12,
      "c": 0,
      "h": 89.88,
      "l": 0,
      "mode": "oklch",
    },
    "oklchDark": {
      "alpha": 0.12,
      "c": 0,
      "h": 89.88,
      "l": 1,
      "mode": "oklch",
    },
  },
  "borderNeutralMuted": {
    "oklch": {
      "alpha": 0.08,
      "c": 0,
      "h": 89.88,
      "l": 0,
      "mode": "oklch",
    },
    "oklchDark": {
      "alpha": 0.08,
      "c": 0,
      "h": 89.88,
      "l": 1,
      "mode": "oklch",
    },
  },
  "borderPositive": {
    "oklch": {
      "c": 0.13,
      "h": 151.8,
      "l": 0.47000000000000003,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.10400000000000001,
      "h": 151.8,
      "l": 0.62696,
      "mode": "oklch",
    },
  },
  "borderPositiveMuted": {
    "oklch": {
      "c": 0.02,
      "h": 151.8,
      "l": 0.95,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.013866666666666668,
      "h": 151.8,
      "l": 0.31,
      "mode": "oklch",
    },
  },
  "borderPrimary": {
    "oklch": {
      "c": 0,
      "h": 0,
      "l": -0.08,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 0,
      "l": 1.1,
      "mode": "oklch",
    },
  },
  "borderPrimaryMuted": {
    "oklch": {
      "c": 0,
      "h": 0,
      "l": 0.95,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 0,
      "l": 0.31,
      "mode": "oklch",
    },
  },
  "borderWarning": {
    "oklch": {
      "c": 0.22,
      "h": 80,
      "l": 0.74,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.17600000000000002,
      "h": 80,
      "l": 0.9107839999999999,
      "mode": "oklch",
    },
  },
  "borderWarningMuted": {
    "oklch": {
      "c": 0.04,
      "h": 80,
      "l": 0.95,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.02346666666666667,
      "h": 80,
      "l": 0.31,
      "mode": "oklch",
    },
  },
  "brand": {
    "oklch": {
      "c": 0,
      "h": 0,
      "l": 0,
      "mode": "oklch",
    },
    "oklchDark": undefined,
  },
  "foregroundCritical": {
    "oklch": {
      "c": 0.205,
      "h": 20.28,
      "l": 0.52,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.17425,
      "h": 20.28,
      "l": 0.75,
      "mode": "oklch",
    },
  },
  "foregroundDisabled": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 0.84,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.4,
      "mode": "oklch",
    },
  },
  "foregroundNeutral": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 0.24,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.96,
      "mode": "oklch",
    },
  },
  "foregroundNeutralMuted": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 0.49,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.8099999999999999,
      "mode": "oklch",
    },
  },
  "foregroundPositive": {
    "oklch": {
      "c": 0.13,
      "h": 151.8,
      "l": 0.52,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.1105,
      "h": 151.8,
      "l": 0.75,
      "mode": "oklch",
    },
  },
  "foregroundPrimary": {
    "oklch": {
      "c": 0,
      "h": 0,
      "l": 0.52,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 0,
      "l": 0.75,
      "mode": "oklch",
    },
  },
  "foregroundWarning": {
    "oklch": {
      "c": 0.22,
      "h": 80,
      "l": 0.52,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.187,
      "h": 80,
      "l": 0.75,
      "mode": "oklch",
    },
  },
  "white": {
    "oklch": {
      "c": 0,
      "l": 1.0000000000000002,
      "mode": "oklch",
    },
    "oklchDark": undefined,
  },
}
`;

exports[`themes/tokens/color/utilities/generateColors > with default values 1`] = `
{
  "backgroundCritical": {
    "oklch": {
      "c": 0.205,
      "h": 20.28,
      "l": 0.59,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.164,
      "h": 20.28,
      "l": 0.584168,
      "mode": "oklch",
    },
  },
  "backgroundCriticalMuted": {
    "oklch": {
      "c": 0.02,
      "h": 20.28,
      "l": 0.98,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.021866666666666666,
      "h": 20.28,
      "l": 0.25,
      "mode": "oklch",
    },
  },
  "backgroundDisabled": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 0.95,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.28,
      "mode": "oklch",
    },
  },
  "backgroundDisabledMuted": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 0.98,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.23,
      "mode": "oklch",
    },
  },
  "backgroundElevationBase": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 1,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.2,
      "mode": "oklch",
    },
  },
  "backgroundElevationOverlay": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 1,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.23,
      "mode": "oklch",
    },
  },
  "backgroundElevationRaised": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 1,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.215,
      "mode": "oklch",
    },
  },
  "backgroundNeutral": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 0.94,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.32,
      "mode": "oklch",
    },
  },
  "backgroundNeutralMuted": {
    "oklch": {
      "alpha": 0.03,
      "c": 0,
      "h": 89.88,
      "l": 0,
      "mode": "oklch",
    },
    "oklchDark": {
      "alpha": 0.03,
      "c": 0,
      "h": 89.88,
      "l": 1,
      "mode": "oklch",
    },
  },
  "backgroundPage": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 1,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.16,
      "mode": "oklch",
    },
  },
  "backgroundPageMuted": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 0.98,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.18,
      "mode": "oklch",
    },
  },
  "backgroundPositive": {
    "oklch": {
      "c": 0.13,
      "h": 151.8,
      "l": 0.55,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.10400000000000001,
      "h": 151.8,
      "l": 0.52696,
      "mode": "oklch",
    },
  },
  "backgroundPositiveMuted": {
    "oklch": {
      "c": 0.02,
      "h": 151.8,
      "l": 0.98,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.013866666666666668,
      "h": 151.8,
      "l": 0.25,
      "mode": "oklch",
    },
  },
  "backgroundPrimary": {
    "oklch": {
      "c": 0.24,
      "h": 262.67,
      "l": 0.55,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.192,
      "h": 262.67,
      "l": 0.54984,
      "mode": "oklch",
    },
  },
  "backgroundPrimaryMuted": {
    "oklch": {
      "c": 0.02,
      "h": 262.67,
      "l": 0.98,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.0256,
      "h": 262.67,
      "l": 0.25,
      "mode": "oklch",
    },
  },
  "backgroundWarning": {
    "oklch": {
      "c": 0.22,
      "h": 80,
      "l": 0.82,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.17600000000000002,
      "h": 80,
      "l": 0.810784,
      "mode": "oklch",
    },
  },
  "backgroundWarningMuted": {
    "oklch": {
      "c": 0.04,
      "h": 80,
      "l": 0.98,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.02346666666666667,
      "h": 80,
      "l": 0.25,
      "mode": "oklch",
    },
  },
  "black": {
    "oklch": {
      "c": 0,
      "l": 0,
      "mode": "oklch",
    },
    "oklchDark": undefined,
  },
  "borderCritical": {
    "oklch": {
      "c": 0.205,
      "h": 20.28,
      "l": 0.51,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.164,
      "h": 20.28,
      "l": 0.684168,
      "mode": "oklch",
    },
  },
  "borderCriticalMuted": {
    "oklch": {
      "c": 0.02,
      "h": 20.28,
      "l": 0.95,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.021866666666666666,
      "h": 20.28,
      "l": 0.31,
      "mode": "oklch",
    },
  },
  "borderDisabled": {
    "oklch": {
      "alpha": 0.06,
      "c": 0,
      "h": 89.88,
      "l": 0,
      "mode": "oklch",
    },
    "oklchDark": {
      "alpha": 0.04,
      "c": 0,
      "h": 89.88,
      "l": 1,
      "mode": "oklch",
    },
  },
  "borderNeutral": {
    "oklch": {
      "alpha": 0.12,
      "c": 0,
      "h": 89.88,
      "l": 0,
      "mode": "oklch",
    },
    "oklchDark": {
      "alpha": 0.12,
      "c": 0,
      "h": 89.88,
      "l": 1,
      "mode": "oklch",
    },
  },
  "borderNeutralMuted": {
    "oklch": {
      "alpha": 0.08,
      "c": 0,
      "h": 89.88,
      "l": 0,
      "mode": "oklch",
    },
    "oklchDark": {
      "alpha": 0.08,
      "c": 0,
      "h": 89.88,
      "l": 1,
      "mode": "oklch",
    },
  },
  "borderPositive": {
    "oklch": {
      "c": 0.13,
      "h": 151.8,
      "l": 0.47000000000000003,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.10400000000000001,
      "h": 151.8,
      "l": 0.62696,
      "mode": "oklch",
    },
  },
  "borderPositiveMuted": {
    "oklch": {
      "c": 0.02,
      "h": 151.8,
      "l": 0.95,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.013866666666666668,
      "h": 151.8,
      "l": 0.31,
      "mode": "oklch",
    },
  },
  "borderPrimary": {
    "oklch": {
      "c": 0.24,
      "h": 262.67,
      "l": 0.47000000000000003,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.192,
      "h": 262.67,
      "l": 0.64984,
      "mode": "oklch",
    },
  },
  "borderPrimaryMuted": {
    "oklch": {
      "c": 0.02,
      "h": 262.67,
      "l": 0.95,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.0256,
      "h": 262.67,
      "l": 0.31,
      "mode": "oklch",
    },
  },
  "borderWarning": {
    "oklch": {
      "c": 0.22,
      "h": 80,
      "l": 0.74,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.17600000000000002,
      "h": 80,
      "l": 0.9107839999999999,
      "mode": "oklch",
    },
  },
  "borderWarningMuted": {
    "oklch": {
      "c": 0.04,
      "h": 80,
      "l": 0.95,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.02346666666666667,
      "h": 80,
      "l": 0.31,
      "mode": "oklch",
    },
  },
  "brand": {
    "oklch": {
      "c": 0.24,
      "h": 262.67,
      "l": 0.55,
      "mode": "oklch",
    },
    "oklchDark": undefined,
  },
  "foregroundCritical": {
    "oklch": {
      "c": 0.205,
      "h": 20.28,
      "l": 0.52,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.17425,
      "h": 20.28,
      "l": 0.75,
      "mode": "oklch",
    },
  },
  "foregroundDisabled": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 0.84,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.4,
      "mode": "oklch",
    },
  },
  "foregroundNeutral": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 0.24,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.96,
      "mode": "oklch",
    },
  },
  "foregroundNeutralMuted": {
    "oklch": {
      "c": 0,
      "h": 89.88,
      "l": 0.49,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0,
      "h": 89.88,
      "l": 0.8099999999999999,
      "mode": "oklch",
    },
  },
  "foregroundPositive": {
    "oklch": {
      "c": 0.13,
      "h": 151.8,
      "l": 0.52,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.1105,
      "h": 151.8,
      "l": 0.75,
      "mode": "oklch",
    },
  },
  "foregroundPrimary": {
    "oklch": {
      "c": 0.24,
      "h": 262.67,
      "l": 0.52,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.204,
      "h": 262.67,
      "l": 0.75,
      "mode": "oklch",
    },
  },
  "foregroundWarning": {
    "oklch": {
      "c": 0.22,
      "h": 80,
      "l": 0.52,
      "mode": "oklch",
    },
    "oklchDark": {
      "c": 0.187,
      "h": 80,
      "l": 0.75,
      "mode": "oklch",
    },
  },
  "white": {
    "oklch": {
      "c": 0,
      "l": 1.0000000000000002,
      "mode": "oklch",
    },
    "oklchDark": undefined,
  },
}
`;
